--- a/.i3/config
+++ b/.i3/config
@@ -9,21 +9,36 @@ floating_modifier $mod
 
 # thin borders
 hide_edge_borders both
+new_window normal 0
+new_float normal 0
+new_window 1pixel
 
 #volume
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -- -5% #decrease
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% && notify-send --expire-time=10 "Vol: $(exec amixer -c 0 get Master | grep Mono: | cut -d " " -f6)"
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% && notify-send --expire-time=10 "Vol: $(exec amixer -c 0 get Master | grep Mono: | cut -d " " -f6)"
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle && notify-send --expire-time=10 "Vol: UN/MUTE"
 
-#switch to vga monitor and turn off laptop screen
-bindsym $mod+m exec xrandr --output VGA1 --mode 1680x1050 && exec xrandr --output LVDS1 --off
+# Screen brightness controls
+bindsym XF86MonBrightnessUp exec light -A 5 && notify-send --expire-time=20 "LCD Backlight $(printf %.0f%% $(light -G))"
+bindsym XF86MonBrightnessDown exec light -U 5 && notify-send --expire-time=20 "LCD Backlight $(printf %.0f%% $(light -G))"
+
+#screenshots with scrot
+bindsym Print exec scrot ~/Pictures/Screenshots/`date +%Y-%m-%d_%H:%M:%S`.png
+bindsym $mod+Print exec scrot -u ~/Pictures/Screenshots/`date +%Y-%m-%d_%H:%M:%S`.png
+bindsym $mod+Shift+Print exec scrot -s $HOME/Pictures/Screenshots/`date +%Y-%m-%d_%H:%M:%S`.png
 
 #switch back to laptop screen
-bindsym $mod+n exec xrandr --output LVDS1 --auto
+bindsym $mod+n exec xrandr --output LVDS-1 --auto
+
+#dual monitor setup
+bindsym $mod+shift+m exec xrandr --output LVDS-1 --auto --right-of VGA-1 --auto && exec feh --recursive --randomize --bg-fill ~/Pictures/surf/*
+
+#switch to vga monitor and turn off laptop screen
+bindsym $mod+m exec xrandr --output VGA-1 --auto && exec xrandr --output LVDS-1 --off && exec feh --recursive --randomize --bg-fill ~/Pictures/surf/*
 
 # start a terminal
-bindsym $mod+Return exec urxvt
+bindsym $mod+Return exec urxvt -cd "`xcwd`"
 
 # kill focused window
 bindsym $mod+Shift+Q kill
@@ -80,34 +95,46 @@ bindsym $mod+a focus parent
 new_window pixel 1
 
 # switch to workspace
-bindsym $mod+1 workspace 1: main
-bindsym $mod+2 workspace 2: web
-bindsym $mod+3 workspace 3: terms
-bindsym $mod+4 workspace 4: media
-bindsym $mod+5 workspace 5: off
-bindsym $mod+6 workspace 6: misc
+bindsym $mod+1 workspace 1
+bindsym $mod+2 workspace 2
+bindsym $mod+3 workspace 3
+bindsym $mod+4 workspace 4
+bindsym $mod+5 workspace 5
+bindsym $mod+6 workspace 6
+bindsym $mod+7 workspace 7
+bindsym $mod+8 workspace 8
+bindsym $mod+9 workspace 9
+bindsym $mod+0 workspace 10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1: main
-bindsym $mod+Shift+2 move container to workspace 2: web
-bindsym $mod+Shift+3 move container to workspace 3: terms
-bindsym $mod+Shift+4 move container to workspace 4: media
-bindsym $mod+Shift+5 move container to workspace 5: off
-bindsym $mod+Shift+6 move container to workspace 6: misc
-
-#start nitrogen for wallpaper handling
+bindsym $mod+Shift+1 move container to workspace 1
+bindsym $mod+Shift+2 move container to workspace 2
+bindsym $mod+Shift+3 move container to workspace 3
+bindsym $mod+Shift+4 move container to workspace 4
+bindsym $mod+Shift+5 move container to workspace 5
+bindsym $mod+Shift+6 move container to workspace 6
+bindsym $mod+Shift+7 move container to workspace 7
+bindsym $mod+Shift+8 move container to workspace 8
+bindsym $mod+Shift+9 move container to workspace 9
+bindsym $mod+Shift+0 move container to workspace 10
+#start feh for wallpaper handling
 exec --no-startup-id feh --recursive --randomize --bg-fill ~/Pictures/surf/*
 
 #startup apps
-#exec --no-startup-id conky
-exec --no-startup-id sleep 5 && xfce4-power-manager
-exec --no-startup-id rescuetime
+exec --no-startup-id wicd-client --tray
+exec --no-startup-id sleep 10 dunst -config ~/.config/dunst/dunstrc
+exec --no-startup-id sleep 10 && xfce4-power-manager
 exec --no-startup-id redshift -l 43.4025790:-80.3878430
+exec --no-startup-id sleep 10 && /opt/piavpn/bin/pia-client
+exec --no-startup-id sleep 45 && parcellite
+exec --no-startup-id sleep 10 && rescuetime
+exec --no-startup-id setxkbmap -rules evdev -model evdev -layout us -variant altgr-intl
+exec_always --no-startup-id ~/.config/polybar/polybar.sh
 
 #program shortcuts
-bindsym $mod+i exec google-chrome
-bindsym $mod+o exec thunar
-bindsym $mod+p exec subl
+bindsym $mod+i exec ~/firefox-stable/firefox
+bindsym $mod+o exec pcmanfm
+bindsym $mod+p exec code
 bindsym $mod+u exec htop
 
 # reload the configuration file
@@ -121,8 +148,8 @@ bindsym $mod+Shift+E exit
 mode "Exit (L)ogout, (R)eboot, (S)leep, (P)oweroff" {
         bindsym $mod+r exec systemctl reboot
         bindsym $mod+l exit
-		bindsym $mod+s exec sudo pm-suspend
-        bindsym $mod+p exec systemctl poweroff
+		bindsym $mod+s exec lock && systemctl suspend
+        bindsym $mod+p exec systemctl halt
 
         # back to normal: Enter or Escape
         bindsym Return mode "default"
@@ -161,35 +188,36 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 # window colors
 
-set $rofi-bg-color 	     #191919
-set $bg-color 	         #191919
-set $inactive-bg-color   #191919
-set $text-color          #f3f4f5
-set $inactive-text-color #676E7D
-set $urgent-bg-color     #E26D5C
-
 # start rofi (a program launcher)
-# bindsym $mod+d exec rofi -show run -lines 6 -eh 2-opacity "15" -bw 0 -bc "$bg-color" -bg "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "#9575cd" -font "Noto Mono 20"
-bindsym $mod+d exec rofi -show run -lines 5 -eh 2 -width 40 -padding 100 -opacity "85" -bw 0 -bc "$bg-color" -bg "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "#9575cd" -font "System San Francisco Display 20"
+bindsym $mod+d exec rofi -show drun
 
+# set $mainoutput   LVDS1
+# set $secondoutput VGA1
 
-#                       border              background         text                 indicator
-client.focused          $bg-color           $bg-color          $text-color          #00ff00
-client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
-client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
-client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          #00ff00
+# workspace 1 output LVDS1
+# workspace 2 output LVDS1
+# workspace 3 output LVDS1
+# workspace 4 output LVDS1
+# workspace 5 output LVDS1
+# workspace 6 output VGA1
+# workspace 7 output VGA1
+# workspace 8 output VGA1
+# workspace 9 output VGA1
+# workspace 10 output VGA1
 
-# bar
-bar {
-    position bottom
-font pango: Noto Mono 10
-  	status_command i3blocks -c ~/.i3/i3blocks.conf
-	colors {
-		background $bg-color
-    	separator #191919
-		#                  border             background         text
-		focused_workspace  $bg-color          $bg-color          $text-color
-		inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
-		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
-	}
-}
+workspace 1 output VGA-1
+workspace 2 output VGA-1
+workspace 3 output VGA-1
+workspace 4 output VGA-1
+workspace 5 output VGA-1
+
+workspace 6 output LVDS-1
+workspace 7 output LVDS-1
+workspace 8 output LVDS-1
+workspace 9 output LVDS-1
+workspace 10 output LVDS-1
+
+# assign specific apps to open in workspaces
+assign [class="Nightly"] 1
+assign [class="Code"] 2
+assign [class="Spotify"] 6
